<resources>

    //this is all the strings that store in activity_login.xml
    <string name="login_username_hint">Username</string>
    <string name="login_password_hint">Password</string>
    <string name="login_button">Log In</string>
    <string name="login_havent_acccount">Did Not Have An Account ?</string>
    <string name="login_signup_button">Sign Up</string>

    <string-array name="login_as">
        <item>Anggota</item>
        <item>Pembimbing</item>
    </string-array>

    //this is all the strings that store in activity_register.xml
    <string name="register_username_hint">Username</string>
    <string name="register_email_hint">Email</string>
    <string name="register_password_hint">Password</string>
    <string name="register_confirmpassword_hint">Confirm Password</string>
    <string name="register_jurusan_hint">Jurusan</string>
    <string name="register_kelas_hint">Kelas</string>
    <string name="register_signup_button">Sign Up</string>
    <string name="register_have_account">Already Have An Account ?</string>
    <string name="register_signin_button">Sign In</string>

    //this is all the strings that store in activity_users_about.xml
    <string name="app_name">Project ExCull_App_01</string>
    <string name="edit_profile_menu">Edit Profile</string>
    <string name="home_menu">Home</string>
    <string name="logout_menu">Log Out</string>
    <string name="score_textview">Score</string>
    <string name="value_score">1500</string>
    <string name="rank_textview">Rank</string>
    <string name="value_rank">#3</string>
    <string name="userabout_textview">User About</string>

    <string name="value_user_about">
        "You Know What?<br />"
        "I Dont Care"
    </string>

    <string name="username_textview">Mono</string>
    <string name="joined_club">Club Joined</string>


    //this is all the strings that store in Users Assignment including the arrays for recyclerView
    <string name="sort_by">Sort By</string>
    <string name="users_status">Student</string>

    <string-array name="task_name">
        <item>Relative Layout</item>
        <item>Linear Layout</item>
        <item>Table Layout</item>
        <item>Constraint Layout</item>
    </string-array>
    <string-array name="teacher_name">
        <item>Bu Arne</item>
        <item>Bu Arne</item>
        <item>Bu Arne</item>
        <item>Bu Arne</item>
    </string-array>

    <string-array name="deadline">
        <item>Deadline: 1/03/2021</item>
        <item>Deadline: 21/03/2021</item>
        <item>Deadline: 23/02/2021</item>
        <item>Deadline: 14/02/2021</item>
    </string-array>

    //this is all strings that store in activity_club_menu.xml
    <string name="back_to_profile">Back To Profile</string>
    <string name="orbit">Orbit</string>
    <string name="members">13 Members</string>
    <string name="count_online">3 Online</string>
    <string name="your_score">Your Score</string>
    <string name="value_your_score">123</string>
    <string name="your_rank">Your Rank</string>
    <string name="value_your_rank">3</string>
    <string name="club_desc">Club Description</string>
    <string name="assignment">Assignment</string>
    <string name="notif_assignment">5 New Assignment</string>
    <string name="chatroom">Chatroom</string>
    <string name="notif_chatroom">3 Mentions</string>
    <string name="hof">Half Of Fame</string>
    <string name="notif_hof">Your Rank Have Not Changed</string>

    //this is all strings that store in activity_material_menu
    <string name="back_to_assignment">Back To Assignment</string>
    <string name="material_file">Material Files</string>
    <string name="material_title">Material Title</string>
    <string name="post_by">Posted By : Teacher Name</string>
    <string name="date_material">Date Posted day/month/year</string>

    //this is all strings that store in activity_join_club including array for recycler view
    <string-array name="nama_club">
        <item>Orbit</item>
        <item>NHK</item>
        <item>Rohis</item>
        <item>Badminton</item>
        <item>Angklung</item>
        <item>Debat</item>
    </string-array>

    <string-array name="pendiri">
        <item>Faishal Eka</item>
        <item>Puji Saefuloh</item>
        <item>Badrul Rohman</item>
        <item>Ilham Pertama</item>
        <item>Resti Sintiyana</item>
        <item>Firdaus Haqiqi</item>
    </string-array>


    <string-array name="jumlah_anggota">
        <item>Total Member : 50</item>
        <item>Total Member : 26</item>
        <item>Total Member : 13</item>
        <item>Total Member : 37</item>
        <item>Total Member : 26</item>
        <item>Total Member : 100</item>
    </string-array>


    <string-array name="assignment_title">
        <item>Tugas Native PHP</item>
        <item>PBO Test 1</item>
        <item>Pemahaman OOP</item>
        <item>PPL Uji Kompetensi 1</item>
        <item>PKK Budgeting Test</item>
        <item>Absensi PWPB</item>
        <item>LK 08 SQL</item>
        <item>PWPB Materi MySQL</item>
        <item>Absensi PBO</item>
        <item>Absensi PKK</item>
    </string-array>

    <string-array name="hof_rank">
        <item>4th Rank</item>
        <item>5th Rank</item>
        <item>6th Rank</item>
        <item>7th Rank</item>
        <item>8th Rank</item>
        <item>9th Rank</item>
        <item>10th Rank</item>
        <item>11th Rank</item>
        <item>12th Rank</item>
        <item>13th Rank</item>
        <item>14th Rank</item>
        <item>15th Rank</item>
    </string-array>

    <string-array name="hof_username">
        <item>Jackal</item>
        <item>Lyu Bei</item>
        <item>Abraham</item>
        <item>Daniel EManuel</item>
        <item>Sung Jin Wo</item>
        <item>Achille Fernando</item>
        <item>Hideyoshi Muramasa</item>
        <item>Ah Ryung</item>
        <item>Diaz Nicola</item>
        <item>Persia Juliet</item>
        <item>Kazumi Keiko</item>
        <item>Clarino Aami</item>
    </string-array>
</resources>